# fido2-auth

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  shell.nix
client/: app.js  index.html  package-lock.json  package.json
server/: Cargo.toml  Dockerfile
server/src/: main.rs
ui/: Dockerfile  app.js  package-lock.json  package.json
